@@ -2,6 +2,7 @@
 v1.1.9-git
 ----------
 
+[jan] Officially support PHP 7.
 
 
 ------
